Use Position::IsEquivalent in EphemeralRange::IsCollapsed

Bug: 719343
Change-Id: Idda07669137b2109b50567d6916cb0c1cd6da753